--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The Assets GitHub.io Page.">
     <meta name="author" content="Mosberg">
     <title>Mosberg.GitHub.io - Assets</title>
-    <link type="image/x-icon" href="https://raw.githubusercontent.com/Mosberg/images/pages/ICO/favicon.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="https://raw.githubusercontent.com/Mosberg/images/pages/ICO/favicon.ico" rel="icon">
     <link href="src/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Code|Sofia&effect=neon|outline|emboss|shadow-multiple" rel="stylesheet">
   </head>
@@ -35,6 +35,6 @@
       </p>
     </footer>
 
-    <script src="/src/js/assets.js"></script>
+    <script src="src/js/asset.js"></script>
   </body>
 </html>
